implementation covers simple tests, added some extended tests

--- a/tests/Arraybracket.Bundling.Tests.csproj
+++ b/tests/Arraybracket.Bundling.Tests.csproj
@@ -42,8 +42,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ScriptDependencyOrdererTest.cs" />
-    <Compile Include="ScriptDependencyOrdererTestBase.cs" />
+    <Compile Include="ScriptDependencyOrdererTests\ExtendedTests.cs" />
+    <Compile Include="ScriptDependencyOrdererTests\SimpleTests.cs" />
+    <Compile Include="ScriptDependencyOrdererTests\TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime">
