--- a/src/Arraybracket.Bundling.csproj
+++ b/src/Arraybracket.Bundling.csproj
@@ -44,6 +44,7 @@
       <Private>True</Private>
       <HintPath>..\.packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
+    <Reference Include="System" />
     <Reference Include="System.Web.Optimization">
       <HintPath>..\.packages\Microsoft.AspNet.Web.Optimization.1.0.0\lib\net40\System.Web.Optimization.dll</HintPath>
     </Reference>
