--- a/src/Arraybracket.Bundling.csproj
+++ b/src/Arraybracket.Bundling.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DependencyNameComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptDependencyOrderer.cs" />
   </ItemGroup>
