--- a/bundling.nuspec
+++ b/bundling.nuspec
@@ -2,15 +2,15 @@
 <package>
 	<metadata>
 		<id>Arraybracket.Bundling</id>
-		<version>1.0.0</version>
+		<version>1.0.1</version>
 		<authors>Shane S. Anderson</authors>
 		
 		<summary>A dependency-based IBundleOrderer for *.js and *.ts files that uses /// &lt;reference /> tags.</summary>
 		<description>ScriptDependencyOrderer is a dependency-based IBundleOrderer for JavaScript and TypeScript bundles that looks at /// &lt;reference /> tags.</description>
 		<tags>aspnet asp.net optimization minification dependencies</tags>
 
-		<licenseUrl>https://github.com/shaneandersonxp/bundling/blob/master/LICENSE.md</licenseUrl>
-		<projectUrl>https://github.com/shaneandersonxp/bundling</projectUrl>
+		<licenseUrl>https://github.com/arraybracket/bundling/blob/v1.0.1/LICENSE.md</licenseUrl>
+		<projectUrl>https://github.com/arraybracket/bundling</projectUrl>
 		<copyright>Copyright &#169;2013 Arraybracket Limited</copyright>
 		
 		<dependencies>
