--- a/src/Arraybracket.Bundling.csproj
+++ b/src/Arraybracket.Bundling.csproj
@@ -41,6 +41,7 @@
     <AssemblyOriginatorKeyFile>..\arraybracket.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CssUrlVersioner.cs" />
     <Compile Include="DependencyNameComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptDependencyOrderer.cs" />
@@ -54,6 +55,7 @@
       <HintPath>..\.packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Optimization">
       <HintPath>..\.packages\Microsoft.AspNet.Web.Optimization.1.0.0\lib\net40\System.Web.Optimization.dll</HintPath>
     </Reference>
