--- a/sample/packages.config
+++ b/sample/packages.config
@@ -1,17 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Arraybracket.Bundling" version="1.0.1" targetFramework="net45" />
-  <package id="BundleTransformer.Core" version="1.6.21" targetFramework="net45" />
-  <package id="BundleTransformer.TypeScript" version="1.6.18" targetFramework="net45" />
-  <package id="BundleTransformer.Yui" version="1.6.13" targetFramework="net45" />
-  <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
-  <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="BundleTransformer.Core" version="1.8.2" targetFramework="net45" />
+  <package id="BundleTransformer.TypeScript" version="1.8.3" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.Core" version="0.9.2" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="0.9.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="MsieJavaScriptEngine" version="1.1.1" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
-  <package id="WebGrease" version="1.1.0" targetFramework="net45" />
-  <package id="YUICompressor.NET" version="2.2.0.0" targetFramework="net45" />
+  <package id="MsieJavaScriptEngine" version="1.1.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
