--- a/sample/Arraybracket.Bundling.Sample.csproj
+++ b/sample/Arraybracket.Bundling.Sample.csproj
@@ -45,6 +45,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\.packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="Arraybracket.Bundling, Version=1.0.2.0, Culture=neutral, PublicKeyToken=71b4a5d2689c599e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\.packages\Arraybracket.Bundling.1.0.3\lib\net40\Arraybracket.Bundling.dll</HintPath>
+    </Reference>
     <Reference Include="BundleTransformer.Core, Version=1.8.2.0, Culture=neutral, PublicKeyToken=973c344c93aac60d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\.packages\BundleTransformer.Core.1.8.2\lib\net40\BundleTransformer.Core.dll</HintPath>
@@ -142,12 +146,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\src\Arraybracket.Bundling.csproj">
-      <Project>{7003f0b5-f7e3-4ec0-8655-5b605ad79d7b}</Project>
-      <Name>Arraybracket.Bundling</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
