--- a/sample/Arraybracket.Bundling.Sample.csproj
+++ b/sample/Arraybracket.Bundling.Sample.csproj
@@ -45,9 +45,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\.packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
-    <Reference Include="Arraybracket.Bundling, Version=1.0.2.0, Culture=neutral, PublicKeyToken=71b4a5d2689c599e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\.packages\Arraybracket.Bundling.1.0.3\lib\net40\Arraybracket.Bundling.dll</HintPath>
+    <Reference Include="Arraybracket.Bundling">
+      <HintPath>..\.packages\Arraybracket.Bundling.1.0.4\lib\net40\Arraybracket.Bundling.dll</HintPath>
     </Reference>
     <Reference Include="BundleTransformer.Core, Version=1.8.2.0, Culture=neutral, PublicKeyToken=973c344c93aac60d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
